--- a/src/app/components/checkout/checkout-main-component/checkout-main-component.component.html
+++ b/src/app/components/checkout/checkout-main-component/checkout-main-component.component.html
@@ -3,7 +3,7 @@
     <div class="buy-component">
         <div class="details">
 
-            <p-stepper [value]="2" [linear]="false">
+            <p-stepper [value]="3" [linear]="false">
                 <p-step-item [value]="1">
                     <p-step>
                         <div class="stepper-header">Enviament</div>
@@ -35,15 +35,7 @@
                     </p-step>
                     <p-step-panel>
                         <ng-template #content let-activateCallback="activateCallback">
-                            <div class="flex flex-col h-48">
-                                <div
-                                    class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
-                                    Content III
-                                </div>
-                            </div>
-                            <div class="py-6">
-                                <p-button label="Back" severity="secondary" (onClick)="activateCallback(2)" />
-                            </div>
+                            <app-payment></app-payment>
                         </ng-template>
                     </p-step-panel>
                 </p-step-item>
