--- a/src/app/components/shop/item-card/item-card.component.html
+++ b/src/app/components/shop/item-card/item-card.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="item-card-details">
         <div class="title"> {{ item.title }} </div>
-        <div class="price"> {{item.price}} €</div>
+        <div class="price"> {{DracStringUtils.formatPrice(item.price)}}</div>
       </div>
     </div>
   </div>
