--- a/src/app/components/shop/shop-body/shop-popup/shop-popup.component.html
+++ b/src/app/components/shop/shop-body/shop-popup/shop-popup.component.html
@@ -47,7 +47,7 @@
 
                     <div class="details-attr">
                         <span class="details-attr-title"> {{itemDto.title}}</span>
-                        <span class="details-attr-price">{{itemDto.price}}</span>
+                        <span class="details-attr-price"> {{DracStringUtils.formatPrice(itemDto.price)}}</span>
                         <span class="details-attr-desc">{{itemDto.description}}</span>
                     </div>
 
