--- a/src/app/components/checkout/payment/payment.component.scss
+++ b/src/app/components/checkout/payment/payment.component.scss
@@ -1,13 +1,15 @@
 .main {
     width: 100%;
     display: flex;
+    gap: 24px;
+        flex-wrap: wrap;
 
     .info {
         display: flex;
         flex-direction: column;
-        width: 50%;
+        // width: 50%;
         gap: 8px;
-
+        flex: 1 1 505px;
         .payment-opts {
             display: flex;
 
@@ -55,10 +57,58 @@
     }
 
     .items {
-        width: 50%;
-        border: dashed black;
+        // width: 50%;
+
         display: flex;
         flex-direction: column;
+        flex: 1 1 500px;
+        gap: 8px;
+
+        .receipt {
+            border: 2px dashed black;
+            table-layout: fixed;
+
+            .color-size {
+                display: flex;
+                align-items: center;
+                gap: 8px;
+
+                .item-color {
+                    border: 1px solid #000;
+                    display: flex;
+                    padding: 2px;
+                    align-items: center;
+                    width: 16px;
+                    aspect-ratio: 1/1;
+                    border-radius: 50px;
+                }
+            }
+
+
+            table {
+                width: 100%;
+                  font-family: "Noto Sans Mono", monospace;
+            }
+
+            th {
+                text-align: left;
+            }
+
+            .bold {
+                font-weight: bold;
+            }
+
+            .separator {
+                border-bottom: 1px solid #000;
+                height: 1px;
+                padding: 0;
+
+                &.dashed {
+                    border-bottom: 1px dashed #000;
+                }
+            }
+
+        }
     }
 
     .title {
