--- a/src/app/components/shop/shop-body/shop-popup-edit/shop-popup-edit.component.html
+++ b/src/app/components/shop/shop-body/shop-popup-edit/shop-popup-edit.component.html
@@ -43,7 +43,7 @@
             <div class="details-body">
                 <div class="details-attr">
                     <span class="details-attr-title"> {{itemDto.title}}</span>
-                    <span class="details-attr-price">{{itemDto.price}}</span>
+                    <span class="details-attr-price">{{ DracStringUtils.formatPrice(itemDto.price)}}</span>
                     <span class="details-attr-desc">{{itemDto.description}}</span>
                 </div>
 
