--- a/src/app/components/checkout/payment/payment.component.scss
+++ b/src/app/components/checkout/payment/payment.component.scss
@@ -129,4 +129,10 @@
         line-height: normal;
         font-style: italic;
     }
+
+    .pay-button-container {
+        margin-top: 12px;
+        display: flex;
+        justify-content: center;
+    }
 }
