--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
 <div class="header-wrapper">
   <header>
     <div class="logo-wrapper">
-      <div class="logo-container"></div>
+      <div class="logo-container">
+        <img src="assets/logo_white_dragon.svg" alt="Logo">
+      </div>
     </div>
 
     <nav class="main-menu">
