--- a/src/app/components/checkout/payment/payment.component.html
+++ b/src/app/components/checkout/payment/payment.component.html
@@ -61,7 +61,7 @@
                         <td colspan="4" class="separator dashed"></td>
                     </tr>
                     <tr>
-                        <td >Preu total:</td>
+                        <td>Preu total:</td>
                         <td></td>
                         <td></td>
                         <td> {{ DracStringUtils.formatPrice(cartDto.cart.totalNoVat) }}</td>
@@ -78,9 +78,14 @@
         </div>
     </div>
     <div class="info">
-
-        <div class="title">Mètode de pagament:</div>
-        <div class="payment-opts">
+        <div class="disclaimer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tempore quisquam
+            omnis dolorum nostrum, distinctio est debitis pariatur quaerat maiores, rerum architecto, commodi dolorem
+            ducimus fuga magnam corporis expedita sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Inventore tempore quisquam
+            omnis dolorum nostrum, distinctio est debitis pariatur quaerat maiores, rerum architecto, commodi dolorem
+            ducimus fuga magnam corporis expedita sapiente.</div>
+        <!-- <div class="title">Fes el pagament:</div> -->
+        <!-- <div class="payment-opts">
             <div class="payment-opt">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -97,13 +102,17 @@
                 </svg>
                 PayPal
             </div>
+        </div> -->
+        <div class="pay-button-container">
+            <button pButton (click)="requestPayment()">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                    fill="#FFFFFF">
+                    <path
+                        d="M200-280v-280h80v280h-80Zm240 0v-280h80v280h-80ZM80-640v-80l400-200 400 200v80H80Zm179-80h442L480-830 259-720ZM80-120v-80h482q2 21 5 40.5t9 39.5H80Zm600-310v-130h80v90l-80 40ZM800 0q-69-17-114.5-79.5T640-218v-102l160-80 160 80v102q0 76-45.5 138.5T800 0Zm-29-120 139-138-42-42-97 95-39-39-42 43 81 81ZM259-720h442-442Z" />
+                </svg> <span pButtonLabel>Fes el pagament.</span>
+            </button>
         </div>
-                <div class="disclaimer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tempore quisquam
-            omnis dolorum nostrum, distinctio est debitis pariatur quaerat maiores, rerum architecto, commodi dolorem
-            ducimus fuga magnam corporis expedita sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Inventore tempore quisquam
-            omnis dolorum nostrum, distinctio est debitis pariatur quaerat maiores, rerum architecto, commodi dolorem
-            ducimus fuga magnam corporis expedita sapiente.</div>
+
     </div>
 
 </div>
