--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -23,19 +23,17 @@ header {
 
 .logo-wrapper {
   display: flex;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   padding-right: 0.146px;
   justify-content: center;
   align-items: center;
 
   .logo-container {
-    width: 39.854px;
-    height: 40px;
-    flex-shrink: 0;
-    aspect-ratio: 39.85/40;
+    width: 50px;
+    height: 50px;
 
-    background: url(/assets/logo.jpg) lightgray 50% / cover no-repeat;
+    // background: url(/assets/logo_white.svg) lightgray 50% / cover no-repeat;
   }
 }
 
