feat: add dummy payment integration

--- a/src/app/components/dummy/landing/landing.component.html
+++ b/src/app/components/dummy/landing/landing.component.html
@@ -9,3 +9,5 @@
 <a routerLink="/checkout">CART CHECKOUT</a>
 <br>
 <a routerLink="/verify-login">LOGIN VERIFICATION</a>
+<br>
+<a routerLink="/verify-payment">PAYMENT VERIFICATION</a>
