feat: add dynamic totp validation on register phase

--- a/src/app/components/checkout/checkout-main-component/checkout-main-component.component.html
+++ b/src/app/components/checkout/checkout-main-component/checkout-main-component.component.html
@@ -35,7 +35,9 @@
                     </p-step>
                     <p-step-panel>
                         <ng-template #content let-activateCallback="activateCallback">
-                            <app-payment [cartDto]="cartResponse" [requestPaymentDraft]="requestPaymentDraft"></app-payment>
+                            @if (selectedStep == 3) {
+                            <app-payment [cartDto]="cartResponse" [requestPaymentDraft]="requestPaymentDraft" (paymentCompleted)="goNext()"></app-payment>
+                            }
                         </ng-template>
                     </p-step-panel>
                 </p-step-item>
@@ -46,21 +48,11 @@
                     </p-step>
                     <p-step-panel>
                         <ng-template #content let-activateCallback="activateCallback">
-                            <div class="flex flex-col h-48">
-                                <div
-                                    class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
-                                    Content III
-                                </div>
-                            </div>
-                            <div class="py-6">
-                                <p-button label="Back" severity="secondary" (onClick)="activateCallback(2)" />
-                            </div>
+
                         </ng-template>
                     </p-step-panel>
                 </p-step-item>
             </p-stepper>
-
-
 
         </div>
         <div class="nav">
